[package]
name = "aoc_23"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = { version = "0.4.20" }
macros = { path = "./macros" }
rayon = "1.8.0"
regex = "1.10.2"
